# my-drone

./: CLAUDE.md  Todos  pyproject.toml  simulate.py
AHRS/: ahrs_doc.tex
docs/AHRS/: ahrs_doc.aux  ahrs_doc.tex
docs/rigid_body_simulator/: rigid_body_simulator.aux  rigid_body_simulator.tex
drone_control_system/ahrs/: __init__.py  ahrs.py  drift_corrector.py  ema_filter.py  euler.py  math_utils.py
notebooks/: drift_corrector_debug.ipynb  ema_filter_debug.ipynb
simulations/: ahrs_simulate.py
simulations/ahrs/: ahrs.py  gyro_integrator.py  triad.py
simulations/rigid_body_simulator/: __init__.py  frames.py  quaternion.py  rigid_body.py  solvers.py
tests/: test_ahrs.py  test_drift_corrector.py  test_ema_filter.py  test_euler.py  test_gyro_integrator.py  test_math_utils.py  test_triad.py
tests/ahrs/: test_ahrs.py  test_drift_corrector.py  test_euler.py  test_gyro_integrator.py  test_math_utils.py  test_triad.py
tests/rigid_body_simulator/: test_frames.py  test_quaternion.py  test_rigid_body.py  test_solvers.py
